--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
+
 $danger-color: #b71c1c;
 $success-color: #1b5e20;
 $danger-outline: #9e1c1c;
@@ -5,6 +7,10 @@ $success-outline: #144417;
 
 .App {
   text-align: center;
+}
+
+body {
+  font-family: "Roboto", sans-serif;
 }
 
 .App-logo {
@@ -72,4 +78,8 @@ button {
   border: 2px solid $success-outline;
   border-radius: 2px;
   color: #fff;
+}
+
+#content-row {
+  height: 85vh;
 }
